--- a/docs/ru/index.yaml
+++ b/docs/ru/index.yaml
@@ -8,3 +8,5 @@ links:
     href: anotherpage.md
   - title: Подраздел на главной странице
     href: sub-section/
+  - title: Главная
+    href: main.md
