--- a/docs/ru/index.yaml
+++ b/docs/ru/index.yaml
@@ -1,12 +1,4 @@
 title: Шаблон документации
 links:
-  - title: О проекте
-    href: about.md
-  - title: Страница Diplodoc на главной странице
+  - title: Документация
     href: page.md
-  - title: Структура YFM на главной странице
-    href: anotherpage.md
-  - title: Подраздел на главной странице
-    href: sub-section/
-  - title: Главная
-    href: main.md
