--- a/docs/ru/toc.yaml
+++ b/docs/ru/toc.yaml
@@ -1,13 +1,7 @@
-title: Шаблон проекта документации
+title: Общая документация
 href: index.yaml
 items: 
-  - name: О проекте
-    href: about.md
-  - name: Дополнительная страница
+  - name: Главная
     href: page.md
-  - name: Другая страница
-    href: anotherpage.md
-  - name: Подраздел
-    include:
-      path: sub-section/toc.yaml
-      mode: link
+  - name: Обо мне 
+    href: about.md
