--- a/package.json
+++ b/package.json
@@ -2,9 +2,37 @@
   "name": "@diplodoc/documentation-template",
   "version": "0.0.0",
   "description": "template for your diplodoc documentation with hot reload development server",
+  "homepage": "https://github.com/diplodoc-platform/documentation-template",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:diplodoc-platform/documentation-template.git"
+  },
+  "bugs": {
+    "url": "https://github.com/diplodoc-platform/documentation-template/issues",
+    "email": "morozov.kirill.moki@gmail.com"
+  },
+  "author": {
+    "name": "moki",
+    "email": "morozov.kirill.moki@gmail.com",
+    "url": "github.com/moki"
+  },
+  "keywords": [
+    "diplodoc",
+    "markdown-it",
+    "markdown",
+    "playground",
+    "sandbox",
+    "documentation",
+    "development",
+    "hot-reload",
+    "codespaces",
+    "template"
+  ],
+  "license": "MIT",
+  "main": "scripts/serve.js",
   "scripts": {
     "start": "npm run build:docs && node scripts/serve.js",
-    "build:docs": "yfm --input docs --output docs-html --assets-dest docs-html --assets-include 'images/**'"
+    "build:docs": "yfm --input docs --output docs-html"
   },
   "dependencies": {
     "@diplodoc/cli": "^4.55.1",
