--- a/docs/en/toc.yaml
+++ b/docs/en/toc.yaml
@@ -1,7 +1,7 @@
 title: Documentation
 href: index.yaml
 items: 
-  - name: Main
+  - name: Main page
     href: page.md
   - name: About me 
     href: about.md
